--- a/.github/workflows/jsonlint.yml
+++ b/.github/workflows/jsonlint.yml
@@ -57,68 +57,36 @@ jobs:
           node-version: '20'
 
       - id: install-tools
-        name: Install Compliance Tools
+        name: Run Ka0s Lint JSON Action
+        uses: ./.github/actions/kaos-lint-json
+        with:
+          file_path: ${{ github.event.inputs.kaos-files }}
+          fix: 'true'
+          path_resume: ${{ env.KAOS_PATH_RESUME }}jsonlint-results-${{ github.run_id }}.txt
+      
+      - name: Report Status
+        if: failure()
         run: |
-            echo "Installing jsonlint and prettier..."
-            npm install -g jsonlint prettier
-            mkdir -p ${{ env.KAOS_PATH_RESUME }}
-
-      - id: check-json
-        name: Check and Self-Heal JSON
-        if: ${{ contains(github.event.inputs.kaos-files, '.json') }}
-        env:
-           GH_TOKEN: ${{ github.token }}
+          FILE="${{ github.event.inputs.kaos-files }}"
+          KAOS_ISSUE_BODY="The ${{ env.KAOS_MODULE }} process (${{ github.event.inputs.kaos-origin }}) failed. File ($FILE) has violations that could not be auto-fixed. Please check the logs."
+          gh issue comment ${{ github.event.inputs.kaos-issue-id }} -b "$KAOS_ISSUE_BODY"
+          exit 1
+      
+      - name: Report Success
+        if: success()
         run: |
-            # Archivo a comprobar
-            FILE="${{ github.event.inputs.kaos-files }}"
-            FILE_NAME=$(basename "$FILE")
-            RESUME_FILE="${{ env.KAOS_PATH_RESUME }}jsonlint-results-${{ github.run_id }}.txt"
-            
-            echo "Starting Compliance Check for: $FILE" > "$RESUME_FILE"
-            
-            # 1. Validación de Sintaxis (JSONLint) - No recuperable automáticamente
-            if ! jsonlint -q "$FILE"; then
-              echo "❌ Syntax Error detected by JSONLint" >> "$RESUME_FILE"
-              jsonlint "$FILE" >> "$RESUME_FILE" 2>&1 || true
-              
-              KAOS_ISSUE_BODY="The ${{ env.KAOS_MODULE }} process (${{ github.event.inputs.kaos-origin }}) failed. File ($FILE) has INVALID JSON SYNTAX. Please fix manually."
-              gh issue comment ${{ github.event.inputs.kaos-issue-id }} -b "$KAOS_ISSUE_BODY"
-              exit 1
-            else
-              echo "✅ Syntax Check Passed" >> "$RESUME_FILE"
-            fi
-
-            # 2. Validación de Cumplimiento (Prettier) - Recuperable (Self-Healing)
-            if ! prettier --check "$FILE" --config "${{ env.KAOS_PRETTIER_CONFIG }}"; then
-              echo "⚠️ Compliance/Style Error detected. Attempting Self-Healing..." >> "$RESUME_FILE"
-              
-              # Self-Healing: Aplicar formato
-              if prettier --write "$FILE" --config "${{ env.KAOS_PRETTIER_CONFIG }}"; then
-                echo "✅ Self-Healing Successful: File formatted to Ka0s Standards." >> "$RESUME_FILE"
-                
-                # Commit de la corrección
-                git config --global user.name "${{ secrets.KAOS_BOT_NAME }}"
-                git config --global user.email "${{ secrets.KAOS_BOT_EMAIL }}"
-                git add "$FILE"
-                if ! git diff --staged --quiet; then
-                  git commit -m "[Ka0S] Self-Healing: Auto-formatting JSON compliance for $FILE_NAME"
-                  git push origin ${{ github.ref }} --force-with-lease
-                  echo "🔄 Changes pushed to repository." >> "$RESUME_FILE"
-                fi
-                
-                KAOS_ISSUE_BODY="The ${{ env.KAOS_MODULE }} process (${{ github.event.inputs.kaos-origin }}) detected style violations in ($FILE) but successfully performed SELF-HEALING. No action required."
-                gh issue comment ${{ github.event.inputs.kaos-issue-id }} -b "$KAOS_ISSUE_BODY"
-              else
-                echo "❌ Self-Healing Failed." >> "$RESUME_FILE"
-                exit 1
-              fi
-            else
-              echo "✅ Compliance Check Passed (No changes needed)" >> "$RESUME_FILE"
-              KAOS_ISSUE_BODY="The ${{ env.KAOS_MODULE }} process (${{ github.event.inputs.kaos-origin }}) successfully validated file ($FILE). All checks passed."
-              gh issue comment ${{ github.event.inputs.kaos-issue-id }} -b "$KAOS_ISSUE_BODY"
-            fi
-            
-            cat "$RESUME_FILE"
+          FILE="${{ github.event.inputs.kaos-files }}"
+          KAOS_ISSUE_BODY="The ${{ env.KAOS_MODULE }} process (${{ github.event.inputs.kaos-origin }}) successfully validated file ($FILE)."
+          gh issue comment ${{ github.event.inputs.kaos-issue-id }} -b "$KAOS_ISSUE_BODY"
+          
+          # Check for changes (Self-Healing)
+          git config --global user.name "${{ secrets.KAOS_BOT_NAME }}"
+          git config --global user.email "${{ secrets.KAOS_BOT_EMAIL }}"
+          if ! git diff --quiet; then
+             git add "$FILE"
+             git commit -m "[Ka0S] Self-Healing: Auto-formatting JSON compliance for $(basename "$FILE")"
+             git push origin ${{ github.ref }} --force-with-lease
+          fi
 
       - id: upload-logs
         name: Upload Logs
