--- a/.github/workflows/yamllint.yml
+++ b/.github/workflows/yamllint.yml
@@ -63,41 +63,36 @@ jobs:
           node-version: '20'
 
       - id: install-tools
-        name: Install Compliance Tools
+        name: Run Ka0s Lint YAML Action
+        uses: ./.github/actions/kaos-lint-yaml
+        with:
+          file_path: ${{ github.event.inputs.kaos-files }}
+          fix: 'true'
+          path_resume: ${{ env.KAOS_PATH_RESUME }}yamllint-results-${{ github.run_id }}.txt
+      
+      - name: Report Status
+        if: failure()
         run: |
-            echo "Installing yamllint and prettier..."
-            python -m pip install yamllint
-            npm install -g prettier
-            mkdir -p ${{ env.KAOS_PATH_RESUME }}
-
-      - id: check-yaml
-        name: Check and Self-Heal YAML
-        env:
-           GH_TOKEN: ${{ github.token }}
+          FILE="${{ github.event.inputs.kaos-files }}"
+          KAOS_ISSUE_BODY="The ${{ env.KAOS_MODULE }} process (${{ github.event.inputs.kaos-origin }}) failed. File ($FILE) has violations that could not be auto-fixed. Please check the logs."
+          gh issue comment ${{ github.event.inputs.kaos-issue-id }} -b "$KAOS_ISSUE_BODY"
+          exit 1
+      
+      - name: Report Success
+        if: success()
         run: |
-            # Archivo a comprobar
-            FILE="${{ github.event.inputs.kaos-files }}"
-            FILE_NAME=$(basename "$FILE")
-            RESUME_FILE="${{ env.KAOS_PATH_RESUME }}yamllint-results-${{ github.run_id }}.txt"
-            
-            echo "Starting Compliance Check for: $FILE" > "$RESUME_FILE"
-            
-            # 1. Validación de Sintaxis (Yamllint) - No recuperable automáticamente
-            if ! yamllint -c ${{ env.KAOS_YAMLLINT_CONFIG }} "$FILE" >> "$RESUME_FILE" 2>&1; then
-              echo "❌ Syntax/Structure Error detected by Yamllint" >> "$RESUME_FILE"
-              
-              KAOS_ISSUE_BODY="The ${{ env.KAOS_MODULE }} process (${{ github.event.inputs.kaos-origin }}) failed. File ($FILE) has YAML VIOLATIONS that cannot be auto-fixed. Please fix manually."
-              gh issue comment ${{ github.event.inputs.kaos-issue-id }} -b "$KAOS_ISSUE_BODY"
-              exit 1
-            else
-              echo "✅ Syntax/Structure Check Passed" >> "$RESUME_FILE"
-            fi
-
-            # 2. Validación de Cumplimiento (Prettier) - Recuperable (Self-Healing)
-            if ! prettier --check "$FILE" --config "${{ env.KAOS_PRETTIER_CONFIG }}"; then
-              echo "⚠️ Compliance/Style Error detected. Attempting Self-Healing..." >> "$RESUME_FILE"
-              
-              # Self-Healing: Aplicar formato
+          FILE="${{ github.event.inputs.kaos-files }}"
+          KAOS_ISSUE_BODY="The ${{ env.KAOS_MODULE }} process (${{ github.event.inputs.kaos-origin }}) successfully validated file ($FILE)."
+          gh issue comment ${{ github.event.inputs.kaos-issue-id }} -b "$KAOS_ISSUE_BODY"
+          
+          # Check for changes (Self-Healing)
+          git config --global user.name "${{ secrets.KAOS_BOT_NAME }}"
+          git config --global user.email "${{ secrets.KAOS_BOT_EMAIL }}"
+          if ! git diff --quiet; then
+             git add "$FILE"
+             git commit -m "[Ka0S] Self-Healing: Auto-formatting YAML compliance for $(basename "$FILE")"
+             git push origin ${{ github.ref }} --force-with-lease
+          fi
               if prettier --write "$FILE" --config "${{ env.KAOS_PRETTIER_CONFIG }}"; then
                 echo "✅ Self-Healing Successful: File formatted to Ka0s Standards." >> "$RESUME_FILE"
                 
