--- a/core/b2b/core-services/itop/itop-deployment.yaml
+++ b/core/b2b/core-services/itop/itop-deployment.yaml
@@ -39,8 +39,7 @@ spec:
             initialDelaySeconds: 60
             periodSeconds: 30
           readinessProbe:
-            httpGet:
-              path: /
+            tcpSocket:
               port: 80
             initialDelaySeconds: 30
             periodSeconds: 10
