--- a/core/b2b/core-services/zabbix/kustomization.yaml
+++ b/core/b2b/core-services/zabbix/kustomization.yaml
@@ -2,15 +2,15 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespace.yaml
-  - database-pv.yaml
-  - database-pvc.yaml
-  - database-deployment.yaml
-  - zabbix-server-pv.yaml
-  - zabbix-server-pvc.yaml
+  # - database-pv.yaml
+  # - database-pvc.yaml
+  # - database-deployment.yaml
+  # - zabbix-server-pv.yaml
+  # - zabbix-server-pvc.yaml
   - zabbix-server-deployment.yaml
-  - zabbix-server-service.yaml
-  - zabbix-web-deployment.yaml
-  - zabbix-web-service.yaml
+  # - zabbix-server-service.yaml
+  # - zabbix-web-deployment.yaml
+  # - zabbix-web-service.yaml
   - zabbix-agent-daemonset.yaml
   - zabbix-agent-service.yaml
   - zabbix-scripts.yaml
