--- a/core/b2b/core-services/itop/kustomization.yaml
+++ b/core/b2b/core-services/itop/kustomization.yaml
@@ -11,5 +11,6 @@ resources:
   - itop-deployment.yaml
   - itop-service.yaml
   - ingress.yaml
+  - fix-db-permissions-job.yaml
   # Trigger validation for user request
 
