--- a/core/b2b/core-services/itop/ingress.yaml
+++ b/core/b2b/core-services/itop/ingress.yaml
@@ -5,8 +5,7 @@ metadata:
   namespace: itop
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    cert-manager.io/cluster-issuer: "letsencrypt-prod"
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
     nginx.ingress.kubernetes.io/proxy-body-size: "20m"
 spec:
   tls:
