--- a/core/b2b/core-services/itop/itop-service.yaml
+++ b/core/b2b/core-services/itop/itop-service.yaml
@@ -7,7 +7,7 @@ metadata:
     app: itop
     core.kaos.io/type: finops
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
     - port: 80
       targetPort: 80
