--- a/core/b2b/core-services/itop/ingress.yaml
+++ b/core/b2b/core-services/itop/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: itop
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
     nginx.ingress.kubernetes.io/proxy-body-size: "20m"
     # nginx.ingress.kubernetes.io/configuration-snippet: |
     #   proxy_set_header X-Forwarded-Port "8080";
