--- a/core/b2b/core-services/itop/ingress.yaml
+++ b/core/b2b/core-services/itop/ingress.yaml
@@ -5,11 +5,8 @@ metadata:
   namespace: itop
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
     nginx.ingress.kubernetes.io/proxy-body-size: "20m"
-    # nginx.ingress.kubernetes.io/configuration-snippet: |
-    #   proxy_set_header X-Forwarded-Port "8080";
-    #   proxy_set_header X-Forwarded-Host "$host:8080";
 spec:
   tls:
   - hosts:
