--- a/core/b2b/core-services/itop/kustomization.yaml
+++ b/core/b2b/core-services/itop/kustomization.yaml
@@ -13,4 +13,7 @@ resources:
   - ingress.yaml
   - fix-db-permissions-job.yaml
   # Trigger validation for user request and deployment
+  # Change documentation to include SSL redirect
+  # Add SSL redirect annotation to ingress
+  # Update fix-url.sh to handle HTTP_HOST and fallback to default URL
 
