--- a/.github/workflows/cd-core-services.yml
+++ b/.github/workflows/cd-core-services.yml
@@ -154,7 +154,7 @@ jobs:
         run: |
           git config --global user.name "Ka0s CI Bot"
           git config --global user.email "ci@ka0s.io"
-          
+          git pull
           git add audit/deploy/
           if git diff --staged --quiet; then
             echo "No changes to commit."
