--- a/core/b2b/core-services/itop/itop-service.yaml
+++ b/core/b2b/core-services/itop/itop-service.yaml
@@ -8,6 +8,7 @@ metadata:
     core.kaos.io/type: finops
 spec:
   type: LoadBalancer
+  loadBalancerIP: 192.168.1.244
   ports:
     - port: 80
       targetPort: 80
