--- a/core/b2b/core-services/itop/kustomization.yaml
+++ b/core/b2b/core-services/itop/kustomization.yaml
@@ -11,6 +11,5 @@ resources:
   - itop-deployment.yaml
   - itop-service.yaml
   - fix-db-permissions-job.yaml
-  # Trigger validation for user request and deployment
-  # http y https permitidos
+  # Trigger deployment: Force clean redeploy with corrected configs
 
