--- a/core/b2b/core-services/itop/kustomization.yaml
+++ b/core/b2b/core-services/itop/kustomization.yaml
@@ -10,5 +10,6 @@ resources:
   - itop-pvc.yaml
   - itop-deployment.yaml
   - itop-service.yaml
+  - itop-ingress.yaml
   - fix-db-permissions-job.yaml
 
