--- a/core/b2b/core-services/planka/planka-storage.yaml
+++ b/core/b2b/core-services/planka/planka-storage.yaml
@@ -14,6 +14,14 @@ spec:
   hostPath:
     path: "/mnt/data/planka/data"
     type: DirectoryOrCreate
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+        - matchExpressions:
+            - key: kubernetes.io/hostname
+              operator: In
+              values:
+                - k8-node-20
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
