--- a/core/b2b/core-services/soc/ingress.yaml
+++ b/core/b2b/core-services/soc/ingress.yaml
@@ -1,20 +1,21 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: planka-ingress
-  namespace: planka
+  name: wazuh-ingress
+  namespace: soc
   annotations:
     nginx.ingress.kubernetes.io/proxy-body-size: "50m"
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
 spec:
   ingressClassName: nginx
   rules:
-    - host: planka.ka0s.io
+    - host: soc.ka0s.io
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: planka
+                name: wazuh-external
                 port:
-                  number: 80
+                  number: 443
