--- a/core/b2b/core-services/planka/planka-deployment.yaml
+++ b/core/b2b/core-services/planka/planka-deployment.yaml
@@ -26,7 +26,7 @@ spec:
             - containerPort: 1337
           env:
             - name: BASE_URL
-              value: "http://192.168.1.244" # IP Access
+              value: "https://planka.ka0s.io" # FQDN Access
             - name: TRUST_PROXY
               value: "1" # Allow proxy headers
             - name: DATABASE_URL
