--- a/core/b2b/core-services/planka/ingress.yaml
+++ b/core/b2b/core-services/planka/ingress.yaml
@@ -5,6 +5,9 @@ metadata:
   namespace: planka
   annotations:
     nginx.ingress.kubernetes.io/proxy-body-size: "50m"
+    nginx.ingress.kubernetes.io/sub-filter: 'http://192.168.1.244 https://planka.ka0s.io'
+    nginx.ingress.kubernetes.io/sub-filter-once: "false"
+    nginx.ingress.kubernetes.io/sub-filter-types: "text/html application/javascript"
 spec:
   ingressClassName: nginx
   rules:
