--- a/core/b2b/core-services/planka/ingress.yaml
+++ b/core/b2b/core-services/planka/ingress.yaml
@@ -24,3 +24,4 @@ spec:
                 name: planka
                 port:
                   number: 80
+# Force update to apply snippet annotations after controller restart
